# spacemonkey

./: Cargo.toml  topics_dedup.json
gpt_topics/: Aging.txt  Agriculture.txt  Anthropology.txt  Archaeology.txt  Architecture.txt  Art.txt  Artificial Intelligence.txt  Artificial Neural Networks.txt  Astronomy.txt  Astrophysics.txt  Augmented Reality.txt  Automation.txt  Behaviorism.txt  Biomechanics.txt  Biomedical Engineering.txt  Blockchain.txt  Botany.txt  Business.txt  Chemistry.txt  Climate Change.txt  Climate Science.txt  Cognitive Psychology.txt  Cognitive Science.txt  Consumer Behavior.txt  Cosmology.txt  Crime and Justice.txt  Criminology.txt  Cryptocurrency.txt  Cryptography.txt  Cultural Anthropology.txt  Culture.txt  Cybersecurity.txt  Developmental Psychology.txt  Ecology.txt  Economics.txt  Education.txt  Environmental Science.txt  Ethics.txt  Evolution.txt  Film.txt  (+59 more)
src/: bot.rs  db.rs  main.rs  openai.rs  train_extract.rs
