[package]
name = "spacemonkey"
version = "0.1.0"
edition = "2021"
authors = ["Mack Straight <eizneckam@gmail.com>"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "4"
futures-util = "0.3"
parking_lot = "0.12.1"
reqwest = "0.11"
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serenity = { version = "0.11.5", default-features = false, features = [
    "rustls_backend",
    "builder",
    "cache",
    "chrono",
    "client",
    "gateway",
    "model",
    "http",
    "utils",
] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
